rust/kcl-lib/tests/argument_error/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing argument_error.kcl
---
KCL Semantic error

  × semantic: f requires a value with type `Fn`, but found array (list)
   ╭─[5:1]
 4 │ 
 5 │ map(f, f = [0, 1])
   · ─────────┬────────┬
   ·          │        ╰── tests/argument_error/input.kcl
   ·          ╰── tests/argument_error/input.kcl
   ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: f requires a value with type `Fn`, but found array (list)
         ╭─[5:12]
       4 │
       5 │ map(f, f = [0, 1])
         ·            ───┬──
         ·               ╰── tests/argument_error/input.kcl
         ╰────
